Improve navigation arrows and navigation behavior

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <header>
         <div class="navigation">
-            <button id="prevBook" class="nav-btn" aria-label="Previous book">◄</button>
+            <button id="prevBook" class="nav-btn" aria-label="Previous book">←</button>
             <select id="bookSelect" aria-label="Select book">
                 <option value="">Select a book...</option>
             </select>
-            <button id="nextBook" class="nav-btn" aria-label="Next book">►</button>
-            <button id="prevChapter" class="nav-btn" aria-label="Previous chapter">◄</button>
+            <button id="nextBook" class="nav-btn" aria-label="Next book">→</button>
+            <button id="prevChapter" class="nav-btn" aria-label="Previous chapter">←</button>
             <select id="chapterSelect" aria-label="Select chapter">
                 <option value="">Select a chapter...</option>
             </select>
-            <button id="nextChapter" class="nav-btn" aria-label="Next chapter">►</button>
+            <button id="nextChapter" class="nav-btn" aria-label="Next chapter">→</button>
             <select id="verseSelect" aria-label="Select verse">
                 <option value="">Go to verse...</option>
             </select>
